<resources>
    <string name="app_name">Meeting</string>

    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="date">16–05–2010</string>
    <string name="alert">Alert!</string>
    <string name="no_network">No network found.</string>
    <string name="api_failed">Unable to get response.</string>
    <string name="no_meetings_found">No meetings found for this date.</string>
    <string name="sample_start_time">10.00 AM</string>
    <string name="sample_end_time">11.00 AM</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>


    <string name="schedule_meeting">SCHEDULE NEW MEETING</string>
    <string name="schedule_comp_meeting">Schedule Company Meeting</string>
    <string name="sample_users">Rajat, John, Adam</string>
    <string name="sample_desc">Designing team of Sh**dli project will share their experience with the new team members.</string>


</resources>
