<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:id="@+id/btn_close"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_prev"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center"
                            android:text="BACK"
                            android:textColor="@color/colorWhite"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/nameToolbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/schedule_meeting"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/btn_create"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:tint="@android:color/white" />

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/btn_date"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/edit_sahpe"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="9"
                        tools:text="@string/date" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_start_time"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_sahpe"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintEnd_toEndOf="@+id/btn_date"
                    app:layout_constraintStart_toStartOf="@+id/btn_date"
                    app:layout_constraintTop_toBottomOf="@+id/btn_date">

                    <TextView
                        android:id="@+id/tv_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="9"
                        android:text="@string/start_time" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btn_end_time"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_sahpe"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textColor="@color/colorTextSecondary"
                    app:layout_constraintEnd_toEndOf="@+id/btn_start_time"
                    app:layout_constraintStart_toStartOf="@+id/btn_start_time"
                    app:layout_constraintTop_toBottomOf="@+id/btn_start_time">

                    <TextView
                        android:id="@+id/tv_end_time"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="9"
                        android:text="@string/end_time" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    android:hint="Description"
                    app:layout_constraintEnd_toEndOf="@+id/btn_end_time"
                    app:layout_constraintStart_toStartOf="@+id/btn_end_time"
                    app:layout_constraintTop_toBottomOf="@+id/btn_end_time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:inputType="textNoSuggestions"
                        android:maxEms="10"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/btn_end_time"
                        app:layout_constraintStart_toStartOf="@+id/btn_end_time"
                        app:layout_constraintTop_toBottomOf="@+id/btn_end_time" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_submit"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="Submit"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_end_time"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/btn_end_time"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>